--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  border: 1px solid #ebe9e9;
+  border: 0.5px solid gray;
   border-radius: 1.5rem;
   padding: 1rem;
 }
@@ -21,6 +21,14 @@
 .headerSearchInput {
   padding: 0.7rem 0.5rem;
   font-size: 1rem;
+  background-color: rgb(54, 54, 54);
+  /* background-color: transparent; */
+  /* border: 0.5px solid gray; */
+  border-radius: 5%;
+}
+
+ input[type="text"] {
+  color: #efefef;
 }
 .headerSearchItem {
   display: flex;
@@ -31,7 +39,7 @@
   display: inline-block;
   width: 1px;
   height: 30px;
-  background-color: var(--text-400);
+  background-color: gray;
   margin: 0 1rem;
 }
 .textField {
