--- a/src/index.css
+++ b/src/index.css
@@ -14,10 +14,14 @@
   --primary-100: #e0e7ff;
   --rose-500: #f43f5e;
 }
+
 body {
+  background-color: #333;
+  color: white;
   min-height: 100vh;
   padding: 1rem;
 }
+
 * {
   margin: 0;
   padding: 0;
