--- a/src/App.css
+++ b/src/App.css
@@ -234,7 +234,7 @@ input[type="text"] {
 
 .mapContainer {
   flex: 1;
-  background-color: var(--text-100);
+  background-color: rgb(67, 67, 67);
   position: relative;
 }
 .mapContainer button.getLocation {
