--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,6 @@
   padding: 0.7rem 0.5rem;
   font-size: 1rem;
   background-color: rgb(67, 67, 67);
-  /* background-color: transparent; */
-  /* border: 0.5px solid gray; */
   border-radius: 15rem;
 }
 
@@ -57,7 +55,7 @@ input[type="text"] {
 
 .guestOptions {
   background-color: rgb(67, 67, 67);
-  /* box-shadow: 0 0 10px #efefef; */
+  box-shadow: 0 0 10px #efefef52;
   border-radius: 1rem;
   padding: 1rem;
   border: 0.5px solid gray;
@@ -106,26 +104,29 @@ input[type="text"] {
   /* background-color: #e534 !important; */
 }
 .rdrCalendarWrapper {
-  background-color: transparent !important;
-  border: 1px solid #fff;
+  background-color: rgb(67, 67, 67) !important;
+  border: 0.5px solid gray;
+  box-shadow: 0 0 10px #efefef52;
+  border-radius: 1rem;
 }
 .rdrDateDisplayWrapper {
   background-color: transparent !important;
-  border: 1px solid #fff;
+  border: 0.5px solid gray;
+  border-radius: 1rem 1rem 0 0;
 }
 .rdrDateDisplay {
   background-color: transparent !important;
 }
 .rdrDateDisplayItem {
   background-color: transparent !important;
-  border: 1px solid #fff !important;
+  border: 0.5px solid gray;
 }
 .rdrDateDisplayItemActive {
   border: 2px solid var(--primary-600) !important;
 }
 .rdrMonthAndYearPickers span {
   background-color: transparent !important;
-  border: 1px solid #fff !important;
+  border: 0.5px solid gray;
 }
 .rdrMonthAndYearPickers select {
   background-color: transparent !important;
@@ -133,14 +134,14 @@ input[type="text"] {
 }
 .rdrMonthAndYearWrapper button {
   background-color: #d55 + s !important;
-  border: 1px solid #fff !important;
+  border: 0.5px solid gray;
 }
 
 .rdrDayDisabled {
   background-color: rgb(58, 58, 58) !important;
 }
 .rdrDays {
-  background-color: rgb(75, 75, 75) !important;
+  /* background-color: rgb(75, 75, 75) !important; */
   
 }
 .dateIcon {
